Bug 469604 - [5.2] Masked brush tip size setting is broken
Summary: [5.2] Masked brush tip size setting is broken
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-05-11 00:08 UTC by tomtomtomreportingin
Modified: 2023-08-09 08:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2023-05-11 00:08:27 UTC
git 729487c

SUMMARY
It seems like the user cannot change masked brush tip size.

STEPS TO REPRODUCE
1. Select Bristles-3 Large Smooth brush.
2. Enable Masked Brush tip.
3. Change size of the masked brush tip.

OBSERVED RESULT
No changes occur. Note that when the user closes and reopens the brush settings popup, the old value is still there. 

EXPECTED RESULT
Masked brush tip size should be changeable.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.7 (appimage)
Comment 1 tomtomtomreportingin 2023-05-30 08:02:49 UTC
Also, when Masked Brush tip is enabled, Masked Opacity and Masked Flow seem to be always enabled.
Comment 2 Freya Lupen 2023-05-30 21:34:55 UTC
The masked brushtip size isn't updating until another property is changed, confirming and labeling as a regression (compared to 5.1.5).
About the Opacity and Flow, those don't have checkboxes in 5.1.5. Could be that being always enabled is the expected behavior and the checkboxes got added accidentally but don't do anything.
Comment 3 Dmitry Kazakov 2023-07-21 13:48:36 UTC
I can reproduce the issue.
Comment 4 Dmitry Kazakov 2023-07-21 14:31:35 UTC
Git commit 887a540d0b571c4b0cf9d0618e6469375f3b5e15 by Dmitry Kazakov.
Committed on 21/07/2023 at 14:31.
Pushed by dkazakov into branch 'master'.

Fix regression in the Masking Brush size computation

The preserve mode should be reset on any change of the masking
brush, including the common brush size, which is not stores separately

M  +1    -0    plugins/paintops/libpaintop/KisMaskingBrushOption.cpp

https://invent.kde.org/graphics/krita/-/commit/887a540d0b571c4b0cf9d0618e6469375f3b5e15
Comment 5 Freya Lupen 2023-07-21 16:28:36 UTC
After commit 887a540d I can still reproduce this in the same way as before. Changing to Reopened.
Comment 6 tomtomtomreportingin 2023-07-29 23:08:13 UTC
I can reconfirm. Retitling to 5.2.
Comment 7 Dmitry Kazakov 2023-08-09 07:53:01 UTC
Git commit 98405f805169113e792025c8b970ef4c02b28881 by Dmitry Kazakov.
Committed on 09/08/2023 at 09:52.
Pushed by dkazakov into branch 'master'.

Fix masking brush size issues (again)

The problem happens because of the proportional size link of the
masking brush. It got broken after introduction of
m_commonBrushSizeData field for auto/predefined brushes.

M  +17   -16   plugins/paintops/libpaintop/KisMaskingBrushOption.cpp

https://invent.kde.org/graphics/krita/-/commit/98405f805169113e792025c8b970ef4c02b28881
Comment 8 Dmitry Kazakov 2023-08-09 08:00:37 UTC
Git commit 41956a627b4ac8a0ec7f6f6d63b6ae3179924eb9 by Dmitry Kazakov.
Committed on 09/08/2023 at 10:00.
Pushed by dkazakov into branch 'krita/5.2'.

Fix masking brush size issues (again)

The problem happens because of the proportional size link of the
masking brush. It got broken after introduction of
m_commonBrushSizeData field for auto/predefined brushes.

M  +17   -16   plugins/paintops/libpaintop/KisMaskingBrushOption.cpp

https://invent.kde.org/graphics/krita/-/commit/41956a627b4ac8a0ec7f6f6d63b6ae3179924eb9