Fix regression in the Masking Brush size computation

The preserve mode should be reset on any change of the masking
brush, including the common brush size, which is not stores separately

BUG:469604